--- a/lang/chappy_en.toml
+++ b/lang/chappy_en.toml
@@ -41,6 +41,14 @@ chappy_stats_2 = "It looks %s, %s, %s and %s." # quickness, strength, charisma a
 chappy_stats_3 = "Attributes: %s."
 chappy_stats_4 = "Picture: %s."
 
+#########
+# Fight #
+#########
+mt_chappy_fight = "Fight a Chappy"
+md_chappy_fight = "Fight another Chappy."
+info_chappy_fight = "%s's %s attacks %s's %s with %s: %s(%s) vs. %s(%s)."
+info_chappy_fight_won = "It wins and steals %s health."
+info_chappy_fight_los = "It lost!"
 
 ################
 # Global Stats #
